--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,15 @@
   <meta name="description" content="We&#39;ve got everything you need to look &amp; feel your best." />
   <meta name="keywords" content="beauty, fragrance, perfume, shop online" />
   <title>Today Tomorrow Always by Avon · Shop online our deluxe fragrances</title>
+  <link rel="stylesheet" href="https://bootswatch.com/5/litera/bootstrap.min.css">
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ab8f5869fb.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
